Changed Title to Horus Weather

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="navbar bg-dark text-light d-flex justify-content-center">
-        <h1>Weather Dashboard</h1>
+        <h1>Horus Weather</h1>
     </header>
     <main>
         <div class="container-fluid">
